changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Tentative fix for bug #3349111: invidious server crash.
Do not destroy init_socket[0], instead try to reopen the listening socket.
Do not try to check its status if not valid.
Nicolas Weeger 2011-07-02

Correctly link all regions to their parent. Warn if not found.
Nicolas Weeger 2011-07-02

Remove NEW_MATERIAL_CODE support.
Nicolas Weeger 2011-06-29

Fix crash with detect monster on custom monsters.
Reference count wasn't uptodate, thus archetype would be freed.
Nicolas Weeger 2011-06-28

Rewrite picture loading logic to not be dependant on picture number
in the various bmaps and crossfire.x files.
Remove picture number in crossfire.x files.
Nicolas Weeger 2011-06-26

Remove stray spaces from outputs of applymode, bowmode, petmode, usekeys.
Andreas Kirschbaum 2011-06-25

Remove obsolete type 44 EXPERIENCE.
Nicolas Weeger 2011-06-25

Allow non weapon attacks to have animation suffixes.
Nicolas Weeger 2011-06-25

Redirect Python's stderr and stdout to the Crossfire log.
Uses technique and code from
 http://stackoverflow.com/questions/4307187/how-to-catch-python-stdout-in-c-code
Nicolas Weeger 2011-06-23

Don't open Python script file if cached.
Nicolas Weeger 2011-06-23

Do not crash due to corrupted name/password protocol packets.
Andreas Kirschbaum 2011-06-19

Send golem's hp and maxhp as part of statistics, so client can display that.
Nicolas Weeger 2011-06-12

Give access to jail's information for a region to the plugins.
Nicolas Weeger 2011-06-09

Use a specific field (wc_increase_rate, like skills) for summoning creature's
wc improvement by level.