@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Forbid un-locking items not in direct player's inventory.
+Nicolas Weeger 2011-07-05
+
 Tentative fix for bug #3349111: invidious server crash.
 Do not destroy init_socket[0], instead try to reopen the listening socket.
 Do not try to check its status if not valid.
